# 001_Slide_Deck_Agent

./: .gitignore  MAIN_TEMPLATE_SPECIFICATION_v2.0.md  README.md  claude_code_skills_presentation.py  main_retail_transformation_llapi.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
examples/: advanced_example.py  basic_example.py  color_schemes_demo.py  custom_slides_example.py
slide_deck_agent/: __init__.py  agent.py  models.py
slide_deck_agent/llapi/: __init__.py  annotation_placer.py  content_generator.py  document_parser.py  label_engine.py  prompt_templates.py  structure_recommender.py
slide_deck_agent/skills/: __init__.py  content_analyzer.py  design_optimizer.py  main_slide_generator.py  slide_generator.py
slide_deck_agent/templates/: __init__.py  main_template_config.py  template_registry.py
